# productivity-tracker-backend

./: .dockerignore  .env.example  .env.production  .env.test  .gitignore  .pre-commit-config.yaml  .safety-project.ini  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.jsonc  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci-pipeline.yml  safety-scan.yml
docs/: DOCKER_SETUP.md  ERROR_HANDLING.md  RBAC_HANDLING.md  TESTING.md  TEST_COVERAGE_IMPROVEMENTS.md  TODO.md
docs/docker/: DOCKER_SETUP.md
docs/general/: CLI_COMMANDS.md  HTTPS_SETUP.md
docs/redis/: REDIS_QUICK_START.md  REDIS_SESSION_MANAGEMENT.md
docs/versioning/: VERSIONING_EXAMPLES.md  VERSIONING_STRATEGY.md  VERSIONING_SYSTEM_SUMMARY.md  VERSIONING_USAGE.md  VERSION_ROADMAP.md
migrations/: env.py
migrations/versions/: 4400ca3b2b4a_add_user_name.py  581d7b5f64a2_add_organizations_departments_teams.py  5dcde89b668f_initial_migration.py  6f38e96a8381_add_versioning_feature_flags.py  7cf2a09e130e_update_rbac_relationships.py
nginx/: Dockerfile  nginx.conf
productivity_tracker/: __init__.py  cli.py  main.py  versions.json
productivity_tracker/api/: __init__.py  admin.py  auth.py  departments.py  health.py  organizations.py  permissions.py  roles.py  sessions.py  setup.py  teams.py  versioning.py
productivity_tracker/core/: database.py  dependencies.py  exception_filter.py  exceptions.py  logging_config.py  middleware.py  redis_client.py  security.py  settings.py  setup.py
productivity_tracker/database/: __init__.py
productivity_tracker/database/entities/: __init__.py  base.py  department.py  feature_flag.py  organization.py  role.py  team.py  user.py  version.py
productivity_tracker/models/: auth.py  organization.py  versioning.py
productivity_tracker/repositories/: base.py  department_repository.py  organization_repository.py  permission_repository.py  role_repository.py  team_repository.py  user_repository.py
productivity_tracker/scripts/: README.md  create_super_user.py  seed_rbac.py  seed_test_data.py  setup_dev_env.py
productivity_tracker/services/: department_service.py  organization_service.py  permission_service.py  role_service.py  team_service.py  user_service.py
productivity_tracker/versioning/: __init__.py  utils.py  version.py  version_loader.py  versioning.py
tests/: __init__.py  conftest.py  utilities.py  utils.py
tests/integration/: test_auth_endpoints.py  test_auth_redis_session.py  test_department_endpoints.py  test_organization_endpoints.py  test_rbac_endpoints.py  test_redis_client.py  test_team_endpoints.py
tests/unit/: test_exceptions.py  test_organization_models.py  test_role_service.py  test_user_repository.py  test_user_service.py
tests/unit/repositories/: test_base_repository.py  test_organization_repository.py  test_role_repository.py  test_team_repository.py  test_user_repository.py
tests/unit/services/: test_department_service.py  test_organization_service.py  test_team_service.py
tests/utils/: mock_auth.py  test_router_setup.py  test_versioning.py
